--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fm-index.jsx",
+  "name": "fm-index",
   "version": "0.3.0",
   "description": "FM-index is the fastest full text search algorithm using a compressed index file. This is FM-index for JSX/JS/AMD/Common.js.",
   "scripts": {
